Fix nav font spacing issue

--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -34,14 +34,13 @@
 
 #s_nav {
   font-family: InstitutionRegular;
-  font-size: 24px;
   position: absolute;
   top: 92px;
   display: block;
   width: 100%;
 
   li {
-    display: inline;
+    display: inline-block;
     padding-left: 19px;
     padding-right: 19px;
 
@@ -64,6 +63,7 @@
 
   a:link, a:visited {
     color: #fff;
+    font-size: 24px;
   }
 }
 
